kubeconfig/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: 18arautm/microservices_final:app.3 # Replace with your Docker image
        ports:
        - containerPort: 5000 # Your app's exposed port
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app  # Matches the labels in the deployment
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000  # Port where the app listens
