kubeconfig/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-ip-2
    networking.gke.io/managed-certificates: my-managed-cert
    kubernetes.io/ingress.class: "gce"  # Updated annotation
spec:
  rules:
  - host: professorblackjack.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
